test/typechecker.d/invalid/fns7.souc.bad
n: Integer = 5

f(x: Char): Integer = fndo
	return x
